Last-minute edits for Saurians

--- a/_posts/2016-12-27-saurians.md
+++ b/_posts/2016-12-27-saurians.md
@@ -40,13 +40,18 @@ near large bodies of water.
 Saurians fight using crude spears and polearms sized for their large
 frames. These and the occasional rawhide satchel are the most sophisticated
 tools any human has seen them use. Those experienced in fighting them know to
-sever the tail: it can be targeted from the side or behind at a -2
-penalty. Injury over HP/2 cripples it, which means the Saurian is unable to
-stand upright. This doesn't reduce its movement, but it _does_ mean it can only
-use its natural weapons to fight.
+sever the tail: it can be targeted from the side or behind at a -2 penalty. Like
+the tail of certain mundane lizards, it comes off easily: injury over HP/2 is
+enough to sever it, which means the Saurian is unable to stand upright. This
+doesn't reduce its movement, but it _does_ mean it can only use its natural
+weapons to fight.
 
 Saurians in this state will usually try to flee the battle. The tail grows back
 in time even if severed!
+
+Below are descriptions of all species of saurian found in the original game and
+its expansion. They are meant to be worthy challenges to 250-point delvers,
+which makes them quite scary for less powerful characters.
 
 ## Common Saurian
 
@@ -199,7 +204,7 @@ burning damage, but it's no longer incendiary.
 "Pyre Saurian" and "Saurian Sage" are incompatible with each other. You won't
 even find individuals of both types working together! However, both variants
 _are_ compatible with the "Giant" upgrade, and combining them can give you
-something fairly dragon-like.
+something not entirely unlike a dragon.
 
 [1]: {{ "/gurps/2016/12/07/human-enemies.html" | absolute_url }}
 [2]: {{ "/gurps/2016/12/14/goblins.html" | absolute_url }}
