--- a/_posts/2016-12-27-saurians.md
+++ b/_posts/2016-12-27-saurians.md
@@ -12,7 +12,7 @@ category: gurps
 {:/nomarkdown}
 
 
-This is the third post of a series converting Dragon's Dogma enemies to
+This is the fourth post of a series converting Dragon's Dogma enemies to
 **GURPS**. Previous posts can be found below:
 
 - [Humans][1]
