Add front matter and links

--- a/_posts/2017-02-06-undead.md
+++ b/_posts/2017-02-06-undead.md
@@ -4,6 +4,14 @@ title: "Dragon's Dogma Bestiary: The Undead"
 category: gurps
 ---
 
+This is the fifth post of a series converting Dragon's Dogma enemies to
+**GURPS**. Previous posts can be found below:
+
+- [Humans][1]
+- [Goblins][2]
+- [Wolves][3]
+- [Saurians][4]
+
 In Gransys, the word "undead" applies to those walking corpses more commonly
 known as _zombies_ in other media, but here we use it in the more traditional
 Dungeon Fantasy sense to encompass all sorts of horrors from the grave. Undead
@@ -120,4 +128,7 @@ the PCs somehow manage to deal with the philactery first, they must still
 contend with the Lich, and do so before it has time to make another philactery
 to kill it for good.
 
-[1]: https://bira.github.io/octopus-carnival/gurps/2016/12/07/human-enemies.html
+[1]: {{ "/gurps/2016/12/07/human-enemies.html" | absolute_url }}
+[2]: {{ "/gurps/2016/12/14/goblins.html" | absolute_url }}
+[3]: {{ "/gurps/2016/12/17/wolves.html" | absolute_url }}
+[4]: {{ "/gurps/2016/12/27/saurians.html" | absolute_url }}
