I did write about harpies already

--- a/_posts/2017-02-06-undead.md
+++ b/_posts/2017-02-06-undead.md
@@ -4,13 +4,14 @@ title: "Dragon's Dogma Bestiary: The Undead"
 category: gurps
 ---
 
-This is the fifth post of a series converting Dragon's Dogma enemies to
+This is the sixth post of a series converting Dragon's Dogma enemies to
 **GURPS**. Previous posts can be found below:
 
 - [Humans][1]
 - [Goblins][2]
 - [Wolves][3]
 - [Saurians][4]
+- [Harpies][5]
 
 In Gransys, the word "undead" applies to those walking corpses more commonly
 known as _zombies_ in other media, but here we use it in the more traditional
@@ -132,3 +133,4 @@ to kill it for good.
 [2]: {{ "/gurps/2016/12/14/goblins.html" | absolute_url }}
 [3]: {{ "/gurps/2016/12/17/wolves.html" | absolute_url }}
 [4]: {{ "/gurps/2016/12/27/saurians.html" | absolute_url }}
+[5]: {{ "/gurps/2017/01/06/harpies.html" | absolute_url }}
