Add a lame Valentines joke

--- a/_posts/2017-02-14-eyes.md
+++ b/_posts/2017-02-14-eyes.md
@@ -11,12 +11,16 @@ category: gurps
 </figure>
 {:/nomarkdown}
 
-Eyes are pure monsters: they have no natural habitat or ecological niche. They
-are an expression of corruption from beyond the Rift, appearing only in places
-where the world's veil is thin and supernatural evil is abundant. While they are
-living creatures, their forms and anatomy don't even pay lip service to normal
-phisiological principles. Tough highly intelligent, they never communicate or
-negotiate, and always try to kill non-Eyes that run into them.
+Today is Valentine's Day in the US, so this is me making eyes at you. Not that
+kind of eyes, though.
+
+In Dragon's Dogma, the creatures known as Eyes are pure monsters: they have no
+natural habitat or ecological niche. They are an expression of corruption from
+beyond the Rift, appearing only in places where the world's veil is thin and
+supernatural evil is abundant. While they are living creatures, their forms and
+anatomy don't even pay lip service to normal phisiological principles. Tough
+highly intelligent, they never communicate or negotiate, and always try to kill
+non-Eyes that run into them.
 
 They come in several varieties, all of which share some of the characteristics
 of the Eye of Death found in **Dungeon Fantasy Monsters 1**, p. 14. In fact, the
