--- a/_posts/2017-02-14-eyes.md
+++ b/_posts/2017-02-14-eyes.md
@@ -65,7 +65,7 @@ Not to be confused with Vile Eyes, these things are leathery spheres over three
 meters in diameter whose body is dominated by a huge fanged maw that opens to
 reveal the central eye. A large number of tentacles protrude from the central
 body, each one thick as a human leg and tipped by yet another maw. They are
-invariably highly proficient spellcasters in addition to posessing debilitating
+invariably highly proficient spellcasters in addition to possessing debilitating
 gaze attacks and a barrier similar to that of the Vile Eyes. The monster's
 tentacles reach beyond the barrier and thus are always vulnerable, but that also
 means it doesn't need to lower the barrier to attack with them!
