--- a/_posts/2017-02-14-eyes.md
+++ b/_posts/2017-02-14-eyes.md
@@ -26,6 +26,9 @@ They come in several varieties, all of which share some of the characteristics
 of the Eye of Death found in **Dungeon Fantasy Monsters 1**, p. 14. In fact, the
 Eye of Death could easily be another member of the this monster family.
 
+**Update (2017-02-21)**: The Gazer has its own stat block now, and is even
+nastier with the addition of a couple more gaze attacks.
+
 ## Vile Eyes
 
 The smallest of the bunch, Vile Eyes look like fleshy spheres with a single
@@ -122,12 +125,38 @@ terrible bite. It can use both the Evil Eye's debilitating gaze and the Vile
 Eye's lethal one at will, as well as cast spells or simply slam victims with its
 incredible bulk.
 
-The main spherical body has no tentacles, but the creature can summon up to 16
-of them from rifts that open in the walls or floor _and move around_. Severing a
-tentacle only means it will be automatically replaced by another in 2 turns.
+**ST** 55; **DX** 12; **IQ** 16; **HT** 12
 
-Its statistics are as a normal Evil Eye, but with the following changes: SM is
-+5, ST and HP is 55, bite damage is 6d imp, FP is 50. The tentacles have ST and
-HP 20, Damage 2d imp, DR 2, and Move 4. It has both gaze attacks listed
-previously, though it can only use one at a time in a given turn. It tends to
-know even more spells.
+**SM** +5; **Dodge** 9; **DR** 5 (body), 0 (eye, tentacles);
+
+**HP** 55; **Will** 16; **Per** 16; **FP** 50
+
+**Basic Speed** 6; **Move** 5 (Air).
+
+- **Magic Barrier (-)**: Gives the Gazer DR 30 and Magic Resistance 10 while up.
+- **Death Gaze (Resisted by HT-5)**: 1d toxic damage. Range 20. Cosmic, ignores
+  DR.
+- **Debilitating Gaze (-)**: Works as Dispel Magic cast at skill 20. The target
+  must also resist with HT-5 or be Stunned for seconds equal to the margin of
+  failure. Range 30.
+- **Petryfing Gaze (20 vs. HT)**: As Flesh to Stone (**Magic**, p.51). Range 20.
+- **Blinding Gaze (20 vs. HT)**: As Strike Blind (**Magic**, p. 38). Range 20.
+- **Bite (16)**: Damage 6d imp. Reach C.
+- **Tentacle Bite x16 (16)**: 2d imp, plus the target is automatically grappled
+  at ST 20. Reach 3.
+- **Spells (-)**: Any the GM deems appropriate, at skill 20 for Hard spells and
+  19 for Very Hard ones.
+
+**Traits**: Acute Vision 5; Dark Vision (Color Vision); Doesn't Breathe; Doesn't
+Eat or Drink; Doesn't Sleep; Immunity to Metabolic Hazards; Indomitable; Injury
+Tolerance (No Brain, No Neck, No Vitals); Magery 5; See Invisible; Unfazeable;
+Vibration Sense (Air).
+
+**Class**: Elder Thing.
+
+### Even More Tentacles!
+
+The main spherical body has no tentacles, but the creature can summon up to 16
+of them from rifts that open in the walls or floor _and move around at Move
+4_. Severing a tentacle only means it will be automatically replaced by another
+in 2 turns.
