--- a/_posts/2017-03-29-chimerae.md
+++ b/_posts/2017-03-29-chimerae.md
@@ -47,10 +47,10 @@ monster. You can never have too many freakish mutant lions in your game!
 - **Spells (-)**: The goat head can typically cast Daze-15, Sleep-15, Ice
   Slick-15 and Ice Sphere-15, using the chimera's 20 FP.
 
-**Traits**: Combat Reflexes; Compartimentalized Mind 1 (Spellcasting only);
-Extra Attack 3 (claw/claw/bite/bite); Fearlessness 5; Magery 3; Night Vision 7;
-Penetrating Voice; Quadruped; Restricted Diet (Fresh Meat); Sadism (9); Terror 2
-(Roar).
+**Traits**: 360-degree Vision; Combat Reflexes; Compartimentalized Mind 1
+(Spellcasting only); Extra Attack 3 (claw/claw/bite/bite); Fearlessness 5;
+Magery 3; Night Vision 7; Penetrating Voice; Quadruped; Restricted Diet (Fresh
+Meat); Sadism (9); Terror 2 (Roar).
 
 **Skills**: Brawling-15; Stealth-15; Wrestling-15;
 
