--- a/_posts/2017-03-29-chimerae.md
+++ b/_posts/2017-03-29-chimerae.md
@@ -71,11 +71,11 @@ it's also smart enough to be aware of this! When faced with a large group of
 opponents, a chimera might try to drag them away one at a time.
 
 A chimera's lion and goat heads can be incapacitaded by a single attack doing
-over 12 HP of injury (as if they were limbs). They each all the hit locations
-you'd expect of a head: neck, face, eyes, brain. These can be targeted at the
-usual penalties. Killing a head prevents the chimera from performing the actions
-associated with that head. The lion head is the beast's main head - it dies when
-the whole creature dies.
+over 12 HP of injury (as if they were limbs). They each have all the hit
+locations you'd expect of a head: neck, face, eyes, brain. These can be targeted
+at the usual penalties. Killing a head prevents the chimera from performing the
+actions associated with that head. The lion head is the beast's main head - it
+dies when the whole creature dies.
 
 ## Chimera Variants:
 
