Tagged all posts

--- a/_posts/2016-12-14-goblins.md
+++ b/_posts/2016-12-14-goblins.md
@@ -2,6 +2,10 @@
 layout: post
 title: "Dragon's Dogma: Goblins"
 category: gurps
+tags:
+  - gurps
+  - bestiary
+  - dragons-dogma
 ---
 
 {::nomarkdown}
