--- a/_posts/2016-12-17-wolves.md
+++ b/_posts/2016-12-17-wolves.md
@@ -2,6 +2,10 @@
 layout: post
 title: "Dragon's Dogma: Wolves"
 category: gurps
+tags:
+  - gurps
+  - dragons-dogma
+  - bestiary
 ---
 
 {::nomarkdown}
