--- a/_posts/2017-01-26-minions.md
+++ b/_posts/2017-01-26-minions.md
@@ -2,6 +2,8 @@
 layout: post
 title: "Mooks & Minions in GURPS: Octopus Carnival Edition"
 category: gurps
+tags:
+  - gurps
 ---
 
 Octopus Carnival is back from is hiatus! I'll resume my writing here with an
