--- a/_posts/2017-02-06-undead.md
+++ b/_posts/2017-02-06-undead.md
@@ -2,6 +2,10 @@
 layout: post
 title: "Dragon's Dogma Bestiary: The Undead"
 category: gurps
+tags:
+  - gurps
+  - dragons-dogma
+  - bestiary
 ---
 
 This is the sixth post of a series converting Dragon's Dogma enemies to
