--- a/_posts/2016-10-11-castles.md
+++ b/_posts/2016-10-11-castles.md
@@ -1,7 +1,10 @@
 ---
 layout: post
 title: "Dragon's Dogma: Castles"
-tags: gurps
+category: gurps
+tags:
+  - gurps
+  - dragons-dogma
 ---
 
 ## Introduction
