--- a/_posts/2017-01-06-harpies.md
+++ b/_posts/2017-01-06-harpies.md
@@ -2,6 +2,10 @@
 layout: post
 title: "Dragon's Dogma Bestiary: Harpies"
 category: gurps
+tags:
+  - gurps
+  - dragons-dogma
+  - bestiary
 ---
 
 
