--- a/_posts/2017-03-14-cyclopes.md
+++ b/_posts/2017-03-14-cyclopes.md
@@ -2,6 +2,10 @@
 layout: post
 title: "Dragon's Dogma Bestiary: Cyclopes"
 category: gurps
+tags:
+  - gurps
+  - dragons-dogma
+  - bestiary
 ---
 
 {::nomarkdown}
