--- a/_posts/2017-03-29-chimerae.md
+++ b/_posts/2017-03-29-chimerae.md
@@ -2,6 +2,10 @@
 layout: post
 title: "Dragon's Dogma Bestiary: Chimerae"
 category: gurps
+tags:
+  - gurps
+  - dragons-dogma
+  - bestiary
 ---
 
 {::nomarkdown}
