--- a/_posts/2017-11-09-dfrpg-pdf.md
+++ b/_posts/2017-11-09-dfrpg-pdf.md
@@ -9,8 +9,9 @@ tags:
 
 I find myself struggling with minor writer's block[^1], but while I deal with it
 you can rejoice with the fact that the [Dungeon Fantasy RPG is finally
-available in PDF form!][1]. Yes, it's as expensive as the physical box, buy you
-don't have to pay twice that in shipping fees if you live abroad.
+available in PDF form!][1]. At forty dollars it's not exactly cheap, but it's
+still considerably less expensive than the physical box and you don't need to
+spend double its price on shipping if you live abroad!
 
 [^1]: Writing Valeros is like eating a big lump of raw bread dough. It tastes
     super bland and takes forever to get out of your system.
