Title and description

--- a/_posts/2018-08-14-melta.md
+++ b/_posts/2018-08-14-melta.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Melta-Guns"
-description: "A not at all insane weapon for GURPS"
+title: "Meltaguns in GURPS"
+description: "A not at all insane science fiction weapon for GURPS"
 image: /assets/meltagun-to-kokoro.jpg
 tags:
     - gurps
