--- a/_posts/2018-08-14-melta.md
+++ b/_posts/2018-08-14-melta.md
@@ -93,7 +93,7 @@ playing in the 40K setting or somewhere similar, cost doesn't really matter,
 since the people most likely to use these weapons will have them issued by their
 bosses. In other settings they're perfect as the inventions of a pyromaniac
 mad scientist or the like. If they are available commercially, they should be
-expensive, and in all of these cases their Legality Class it no better than 1.
+expensive, and in all of these cases their Legality Class is no better than 1.
 
 
 [1]: http://forums.sjgames.com/showthread.php?t=67296
