--- a/_posts/2019-01-21-angel.md
+++ b/_posts/2019-01-21-angel.md
@@ -42,6 +42,15 @@ the Monster Vault.
 
 ## Angel of Battle
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/mm-4e-angel-of-battle.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Angels of Battle are military leaders. They most commonly lead angels of valor
 (below) into battle, but sometimes also lead mortal forces. When gods send
 angels of battle to deal with a situation, they're not interested in
@@ -77,6 +86,15 @@ obstacle to their plans.
 
 ## Angel of Protection
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/mm-4e-angel-of-protection.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 These are basically Angelic Knights Templar, serving as bodyguards for important
 faithful and protecting temples. It has fluffy feathered wings and wears golden
 plate.
@@ -109,7 +127,17 @@ and 3 dragonborn raiders. Clearly these people are serving Tiamat.
 
 ## Angel of Valor
 
-The rank and file of ~Throne~ the Astral Sea. Individually they're the weakest
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/mm-4e-angel-of-valor.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+
+The rank and file of ~~Throne~~ the Astral Sea. Individually they're the weakest
 of all the angels, but there are "vast armies" of them. When a powerful cleric
 needs numbers to get the job done, they summon a bunch of these. One might also
 be sent to reward the follower of a god for meritorious deeds, either by
@@ -148,6 +176,16 @@ the script and have a PC's deity reward them with the temporary services of an
 Angel of Valor.
 
 ## Angel of Vengeance
+
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/mm-4e-angel-of-vengeance.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 
 Here's an interesting factoid about paladins and clerics in Fourth Edition: they
 no longer lose their powers if they abandon their deity's service. The gods need
@@ -201,12 +239,12 @@ the traditional Christian depiction of them, so I was hesitant to use them as
 enemies.
 
 My opinion has been completely turned around these days thanks to reading the
-marvelous Kill Six Billion Demons webcomic. Its badass kung fu angels give me an
-excellent frame of reference for the ones in the Monster manual, particularly
-because they have all sorts of different moral outlooks while still remaining
-badass kung fu angels. The Angel of Vengeance here is reminds me very strongly
-of them, since it also has that "barely contained nuclear explosion inside a
-physical shell" vibe.
+marvelous [Kill Six Billion Demons][1] webcomic. Its badass kung fu angels give
+me an excellent frame of reference for the ones in the Monster manual,
+particularly because they have all sorts of different moral outlooks while still
+remaining badass kung fu angels. The Angel of Vengeance here is reminds me very
+strongly of them, since it also has that "barely contained nuclear explosion
+inside a physical shell" vibe.
 
 So if you want 4e angels to feel less generic, K6BD can be an excellent source
 of inspiration. Perhaps the servants of each deity organize themselves in
@@ -216,3 +254,5 @@ looks like the luminous silhouettes here, but one serving Bane or Tiamat looks
 more like a K6BD Thorn Knight. Then you have those unaligned mercenaries, and I
 can easily imagine "Reach Heaven Through Violence" being one of _their_ central
 tenets.
+
+[1]: https://killsixbilliondemons.com/
