--- a/_posts/2019-02-27-banshrae.md
+++ b/_posts/2019-02-27-banshrae.md
@@ -1,16 +1,29 @@
 ---
 layout: post
 title: "Let's Read the Monster Manual/Vault: Banshrae"
+image: /assets/wir-mm-4e-banshrae.png
 tags:
     - dnd4
     - wir
 ---
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-banshrae.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This is another entry in my Let's Read of the Monster Manual and Monster Vault
+for D&D Fourth Edition. You can see the rest of them [here][1].
+
 A Banshrae is a Medium fey humanoid that looks like the love child of an elf and
 a praying mantis. Tall and rail-thin, they have alabaster skin, long clawed
-fingers and triangular mouthless faces with insectile eyes. I don't know if
-banshraes come from earlier editions, or if they are new. They're only on the
-Monster Manual.
+fingers and triangular mouthless faces with insectile eyes. They're originally
+from Third Edition's Monster Manual V, and here they're only on the Monster
+Manual.
 
 ## The Lore
 
@@ -22,7 +35,7 @@ tricksters, and the bad apples are sadistic serial killers. I guess you don't
 need to officially swear allegiance to the cosmic principle of Evil to be an
 asshole.
 
-Having no mouth, banshraes communicate via telepathy. I guess hey either don't
+Having no mouth, banshraes communicate via telepathy. I guess they either don't
 need food at all or feed on someting like ambient magic. One interesting factoid
 is that banshraes love singing and the sound of wind instruments, despite having
 no way to sing or play themselves. Stories speak of people who managed to avoid
@@ -36,17 +49,17 @@ despite having no mouth. I picture them doing a fancy palm strike on one end of
 the blowgun to fire a dart out of the other.
 
 The **Banshrae Dartswarmer** is level 11 artillery with 89 HP, who fights
-unarmed in melee but whose specialty is firing poisoned blowgun darts that daze
-and inflict a penalty to attacks. Every so often (recharge 3-6) then can go
-"full auto" and fire a dart flurry with the same effect at anyone in a close
-blast 5. That basically hits the entire PC party unless they're _very_ spread
-out.
+unarmed in melee but whose specialty is firing poisoned blowgun darts that do
+damage, daze and inflict a penalty to attacks. Every so often (recharge 3-6)
+then can go "full auto" and fire a dart flurry with the same effect at anyone in
+a close blast 5. That basically hits the entire PC party unless they're _very_
+spread out.
 
 The **Banshrae Warrior** is a level 12 skirmisher with 121 HP who can also use a
 blowgun but who focuses on its praying mantis kung-fu. It can shift 1 square as
 a minor action after hitting with a melee attack, and it has two of those: a
-basic slam, and the Staggering Palm. Staggering Palm stuns the target for a
-turn, but only recharges after the banshrae uses Mantid Dance.
+basic slam, and the Staggering Palm. Staggering Palm does damage and stuns the
+target for a turn, but only recharges after the banshrae uses Mantid Dance.
 
 Mantid Dance is a move action, and lasts a turn. While in effect, it gives the
 banshrae warrior +2 to all defenses (okay) and makes _all ranged attacks
@@ -62,4 +75,7 @@ aren't the "nice" banshraes.
 
 I don't think I'm entirely sold on the "heartless serial killer" presentation,
 but the mechanics inspire me to do a Five Venoms kung-fu storyline with a
-banshrae dojo as the villains.
+banshrae dojo as the villains. You could also tone the serial killer thing down
+and present them as more cruel pranksters who aren't necessarily out for blood.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
