--- a/_posts/2019-03-13-basilisk.md
+++ b/_posts/2019-03-13-basilisk.md
@@ -6,6 +6,15 @@ tags:
     - wir
 ---
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-basilisk.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Basilisks are another traditional D&D monster that's been around since at least
 the days of Basic. Here they're Large natural beasts, in the form of beefy grey
 eight-legged lizards with copious spines running down their backs. Basilisks
