--- a/_posts/2019-02-27-banshrae.md
+++ b/_posts/2019-02-27-banshrae.md
@@ -8,7 +8,7 @@ tags:
 ---
 
 {::nomarkdown}
-<figure class="left">
+<figure class="center">
   <img src="{{ "/assets/wir-mm-4e-banshrae.png" | absolute_url }}"/>
   <figcaption>
     Copyright 2008 Wizards of the Coast
