--- a/_posts/2019-03-13-basilisk.md
+++ b/_posts/2019-03-13-basilisk.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Let's Read the 4e Monster Manual/Vault: Basilisk"
+image: /assets/wir-mm-4e-basilisk.png
 tags:
     - dnd4
     - wir
