--- a/_posts/2019-03-22-bat.md
+++ b/_posts/2019-03-22-bat.md
@@ -1,12 +1,22 @@
 ---
 layout: post
 title: "Where I read the 4e Monster Manual/Vault: Bat"
+image: /assets/wir-mm-4e-bat.png
 tags:
     - dnd4
     - wir
 ---
 
-Bats are tinier nocturnal mammals who feed on fruit and insects... but those
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-bat.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+Bats are tiny nocturnal mammals who feed on fruit and insects... but those
 aren't the bats we're talking about here. These bats are proper monsters.
 
 ## The Lore
