--- a/_posts/2019-04-17-bear.md
+++ b/_posts/2019-04-17-bear.md
@@ -4,7 +4,17 @@ title: "Let's Read the 4e Monster Manual/Vault: Bear"
 tags:
     - dnd4
     - wir
+image: /assets/wir-mm-4e-bear.png
 ---
+
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-bear.png" | absolute_url }}"/>
+  <figcaption>
+    Cave bear (left) and Dire Bear (right). Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 We have bears in the real world, so they don't require much in the way of
 introduction. D&D has always included a variety of bears in its bestiaries,
