--- a/_posts/2019-05-10-beetle.md
+++ b/_posts/2019-05-10-beetle.md
@@ -6,6 +6,15 @@ tags:
     - wir
 ---
 
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-beetle.png" | absolute_url }}"/>
+  <figcaption>
+    Tangler Beetle (left), Fire Beetle (right) and Rot Scarab Swarm (along the bottom). Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Monstrous beetles are some of the most traditional opposition for low-level
 adventurers, so it's no surprise they show up here. I was sure they'd have an
 entry in the Monster Vault, but it turns out they're MM-only. We get three
