--- a/_posts/2019-05-10-beetle.md
+++ b/_posts/2019-05-10-beetle.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This article is part of a series! Go [here][1] to see the other entries.
+
 Monstrous beetles are some of the most traditional opposition for low-level
 adventurers, so it's no surprise they show up here. I was sure they'd have an
 entry in the Monster Vault, but it turns out they're MM-only. We get three
@@ -62,3 +64,5 @@ undead-adjacent but not undead themselves, so I guess encountering them can be
 somewhat surprising for PCs. Including them in a fight against undead is a good
 way to make sure the cleric can't shut the whole opposing force down with a
 single turning attempt.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
