--- a/_posts/2019-05-13-behemoth.md
+++ b/_posts/2019-05-13-behemoth.md
@@ -1,10 +1,22 @@
 ---
 layout: post
 title: "Where I Read the 4e Monster Manual/Vault: Behemoth"
+image: /assets/wir-mm-4e-behemoths.png
 tags:
     - dnd4
     - wir
 ---
+
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-behemoths.png" | absolute_url }}"/>
+  <figcaption>
+    Bloodspike behemoth (left) and macetail behemoth (right). Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Go [here][1] to see the other entries.
 
 Let's get this out of the way right now: behemoths are dinosaurs. Dinosaurs have
 been a feature of D&D at least since the X1 module for BECMI, but as far as I
@@ -33,13 +45,13 @@ interact with it. They're only on the Monster Manual.
 
 ## Macetail Behemoth
 
-In our world, we called this one ankylosaurus. D&D macetails are ill-tempered
-and territorial on the wild, but if raised from hatchlings they can be
-domesticated for use as pack animals. They're Level 7 Soldiers with 82 HP, and
-fight with their tails. Their basic attack is a Tail Bludgeon that marks, and
-they can sweep their tails on a Close burst 1 that targets Reflex, and knocks
-Medium or smaller targets prone on a hit (in addition to doing damage). The
-sweep recharges on 4-6.
+This one resembles a real-world ankylosaurus. D&D macetails are ill-tempered and
+territorial on the wild, but if raised from hatchlings they can be domesticated
+for use as pack animals. They're Level 7 Soldiers with 82 HP, and fight with
+their tails. Their basic attack is a Tail Bludgeon that marks, and they can
+sweep their tails on a Close burst 1 that targets Reflex, and knocks Medium or
+smaller targets prone on a hit (in addition to doing damage). The sweep
+recharges on 4-6.
 
 The specification that the targets must be Medium or smaller is a bit
 unusual. After all, that covers every possible PC, so it's theoretically
@@ -67,3 +79,5 @@ Personally, I'd also add behemoths to human or elven forces. Maybe that merchant
 caravan you were hired to protect is a train of macetails instead of the mules
 you'd normally expect, and when brigands attack keeping the beasts from going
 berserk is as much of a challenge as the fight itself.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
