Fix behemoth image

--- a/_posts/2019-05-13-behemoth.md
+++ b/_posts/2019-05-13-behemoth.md
@@ -9,7 +9,7 @@ tags:
 
 {::nomarkdown}
 <figure>
-  <img src="{{ "/assets/wir-mm-4e-behemoths.png" | absolute_url }}"/>
+  <img src="https://raw.githubusercontent.com/Bira/octopus-carnival/master/assets/wir-mm-4e-behemoths.png"/>
   <figcaption>
     Bloodspike behemoth (left) and macetail behemoth (right). Copyright 2008 Wizards of the Coast
   </figcaption>
