--- a/_posts/2019-05-27-beholder.md
+++ b/_posts/2019-05-27-beholder.md
@@ -6,6 +6,18 @@ tags:
     - dnd4
 ---
 
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-beholder.jpeg" | absolute_url }}"/>
+  <figcaption>
+    Hi there, fellow kids! <a
+    href="https://wizkids.com/dungeons-dragons-beholder-trophy/">(image source)</a>
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Go [here][1] to see the other entries.
+
 You probably heard of beholders before. You know, floaty spheres with a toothy
 mouth and an arbitrarily large number of eyes. They're kind of a big deal. I
 believe they've been in the game since at least the BECMI era, and were one of
@@ -30,13 +42,15 @@ pretty much anyone other than themselves.
 The Monster Vault elaborates on the above. It says beholders come from the Far
 Realm, but that unlike lots of other aberrant creatures that either cross over
 into our world by accident or to cause destruction, they come here as
-conquerors. They come in an enormous variety, further increased by the fact that
-some of then are changed by the passage from the Far Realm into the world.
+conquerors. There are many beholder varieties, and this diversity is further
+increased by the fact that some of then are changed by the passage from the Far
+Realm into the world.
 
-They're all anti-social megalomaniacs, though, believing themselves the rightful
-rulers of everything they see (and yes, the book does make the pun that they see
-a lot with all tho eyes). Beholders don't really have allies - they have minions
-they lord over or masters they constantly plot to overthrow, Starscream-like.
+All beholders are anti-social megalomaniacs, though, believing themselves the
+rightful rulers of everything they see (and yes, the book does make the pun that
+they see a lot with all those eyes). Beholders don't really have allies - they
+have minions they lord over or masters they constantly plot to overthrow,
+Starscream-like.
 
 Other interesting beholder facts gathered by osmosis from other editions:
 
@@ -161,7 +175,7 @@ its lack of eye ray variety.
 
 When bloodied, and once again when it dies, the eye of flame lets loose a fiery
 burst that targets Reflex and deals fire damage to everyone on a Close
-burst 2. I guess its flotation gasses are more flamable than usual.
+burst 2. I guess its buoyant gasses are more flamable than usual.
 
 ### Beholder Eye Tyrant
 
@@ -216,3 +230,5 @@ with a lot fewer of those. Still, the classic beholder has one in the new
 "gradual doom" flavor, and the Eye Tyrant has two. The level 9 beholder is
 nastier than it seems too, because it's a suitable boss battle for a party of
 level 6 adventurers who won't have easy access to resurrection yet.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
