Beholder image link

--- a/_posts/2019-05-27-beholder.md
+++ b/_posts/2019-05-27-beholder.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Where I read the 4e Monster Manual/Vault: Beholder"
+image: /assets/wir-mm-4e-beholder.jpeg
 tags:
     - wir
     - dnd4
