--- a/_posts/2019-06-26-bodak.md
+++ b/_posts/2019-06-26-bodak.md
@@ -6,6 +6,15 @@ tags:
     - wir
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-bodak.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 
 A D&D original, the bodak first appeared in AD&D if I'm not mistaken. They were
 one of the many high-level undead that resulted when someone really evil died,
