--- a/_posts/2019-07-02-boneclaw.md
+++ b/_posts/2019-07-02-boneclaw.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm-4e-boneclaw.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Here's another monster I never heard of, though I'm almost sure they come from a
 previous edition. They're on the Monster Manual only.
 
