--- a/_posts/2019-07-22-bulette.md
+++ b/_posts/2019-07-22-bulette.md
@@ -6,6 +6,15 @@ tags:
     - dnd4
 ---
 
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-bullette.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Bullettes, or Land Sharks, have been a part of D&D since the very beginning. As
 legend has it, Gary Gygax got the inspiration for them from a cheap plastic
 "dinosaur" toy he had lying around. They look like a cross between a rhino and a
