Driders and cambions

--- a/_posts/2019-07-25-cambion.md
+++ b/_posts/2019-07-25-cambion.md
@@ -6,6 +6,15 @@ tags:
     - dnd4
 ---
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-cambion.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 I clearly remember Cambions existed in third edition, though I don't know if
 they date from earlier than that. They're only statted up in the Monster Manual.
 
@@ -79,7 +88,7 @@ made.
 If you want to make a custom cambion, their "signature" traits are the devil
 keyword, the fire resistance, and the wings with their clumsy flight
 speed. Their attack powers seem to show a strong tendency towards fire, but
-there's no specific power all cambions have.
+there's no specific fire power all cambions have.
 
 Story-wise, I'd say people don't really summon cambions despite them having the
 devil keyword. Rather, cambions arrive at a place by themselves and tempt other
