Lots of MM updates

--- a/_posts/2019-01-21-angel.md
+++ b/_posts/2019-01-21-angel.md
@@ -6,6 +6,8 @@ tags:
     - wir
 ---
 
+This article is part of a series! Go [here][1] to see the other entries.
+
 In a substantial change from monsters bearing the same name the past, Fourth
 Edition angels have winged humanoid upper bodies (with "feminine or masculine
 features"), and their lower bodies trail off into flowing energy. Many believe
@@ -20,7 +22,7 @@ Tiamat and Gruumsh have evil angels on their payroll. You can even find angels
 working as mercenaries, serving people whose causes they find agreeable and who
 can meet their price.
 
-Angels are also the first monster to also show up on the _Monster Vault_, where
+Angels are the first MM monster to also show up on the _Monster Vault_, where
 the lore was changed to make then mostly mercenaries who only ocasionally join
 up with specific gods in a more definitive manner. Here they're Unaligned and
 make being as generic as possible in looks and personality a point of
@@ -256,3 +258,4 @@ can easily imagine "Reach Heaven Through Violence" being one of _their_ central
 tenets.
 
 [1]: https://killsixbilliondemons.com/
+[2]: {{ "/projects/mm-4e/" | relative_url }}
