--- a/_posts/2019-08-06-chimera.md
+++ b/_posts/2019-08-06-chimera.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-chimera.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Go [here][1] to see the other entries.
+
 Chimeras come from Greek mythology, where as far as I know it was just _The_
 Chimera. D&D likes to make unique monsters into whole species, and this is what
 happened here. I remember seeing them statted up for AD&D 2nd Edition in the
@@ -53,3 +64,5 @@ chimera would use and resist acid, a blue one lightning, and so on.
 The suggested encounters are both level 15. The first is 2 chimeras and 2 hill
 giants, and the second a chimera, an azer taskmaster, and 6 azer minion
 warriors.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
