--- a/_posts/2019-01-04-aboleth.md
+++ b/_posts/2019-01-04-aboleth.md
@@ -16,6 +16,7 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This article is part of a series! Go [here][1] to see the other entries.
 
 Our first monster is the Aboleth, everyone's favorite fishy
 masterminds. Background information on them here is a bit sparse if compared to
@@ -146,3 +147,5 @@ in Arcana, Dungeoneering and Insight, so you can still have a scenario where the
 party needs to negotiate for an aboleth's services as a sage. Dungeoneering in
 4e also includes knowledge about aberrant creatures, so it's also a good proxy
 for knowledge about the Far Realm.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
