--- a/_posts/2019-08-08-choker.md
+++ b/_posts/2019-08-08-choker.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm-4e-choker.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2008 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Chokers are humanoid creatures with somewhat elongated heads and very long
 rubbery arms ending in hands whose palms seem lined with sharp barbs. To better
 choke you with, obviously. They're only listed in the Monster Manual, but they
