Fixin' and linkin'

--- a/_posts/2019-08-08-choker.md
+++ b/_posts/2019-08-08-choker.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This article is part of a series! You can find all of them [here][1].
+
 Chokers are humanoid creatures with somewhat elongated heads and very long
 rubbery arms ending in hands whose palms seem lined with sharp barbs. To better
 choke you with, obviously. They're only listed in the Monster Manual, but they
@@ -127,3 +129,5 @@ it clear that chokers are more _monsters_ than _people_. The stat updates are
 welcome too. I'd normally just apply a damage fix to the MM stat blocks and call
 it a day, but these come with some interesting changes like the boost to
 Chameleon Skin.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
