--- a/_posts/2019-08-15-chuul.md
+++ b/_posts/2019-08-15-chuul.md
@@ -14,6 +14,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This article is part of a series! You can find all of them [here][1].
+
 Chuuls are large lobster-like beings with yellowish shells, a semi-upright
 posture, and a mass of little red tentacles dangling from their faces. They're a
 mainstain of the Underdark in every edition they appear in, including this
@@ -103,3 +105,5 @@ The chuul lore in the MM didn't exactly spark joy, y'know? The additions from
 the update make them more interesting in that front. Mechanically they're solid
 opposition, as evidenced by the fact that the update didn't do more than
 increase their damage a bit.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
