--- a/_posts/2019-08-23-colossus.md
+++ b/_posts/2019-08-23-colossus.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This article is part of a series! You can find all of them [here][1].
+
 One of the most famous D&D "monster ladders" is the one composed of golems:
 humanoid constructs built to do the bidding of powerful spellcasters. They're
 generally inspired by mythology, with the name for the category being taken from
@@ -96,3 +98,5 @@ swarms. Woe be unto those who trespass upon the fane of the Raven Queen.
 
 I'm a fan of colossi, particularly of those whose shadow you can stand
 under. They make me wish D&D in general had more giant-climbing rules.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
