--- a/_posts/2019-09-08-sakura.md
+++ b/_posts/2019-09-08-sakura.md
@@ -80,7 +80,7 @@ Damage 1d/2d; BL 19.6kg; HP 14; Will 10; Per 10; FP 12; Basic Speed 8
 - Bow (A) DX-1 {1} - 14
 - Climbing (A) DX-1 {1} - 14
 - Connoisseur (Weapons) (A) IQ-1 {1} - 9
-- Fast-Draw (Sword) (E) DX+2 {2}[1] - 17
+- Fast-Draw (Sword) (E) DX+2 {2}[^1] - 17
 - Gesture (E) IQ {1} - 10
 - Intimidation (A) Will+2 {8} - 12
 - Judo (H) DX-1 {2} - 14
@@ -129,6 +129,7 @@ a -1 penalty.
   - Karate Kick (12): 1d cr, Reach C,1.
   - Judo Grapple (14): 1d-1 control, Reach C.
 
+[^1]: +1 from Combat Reflexes
 
 [1]: {{ "/2017/09/17/dfrpg-warforged.html" | relative_url }}
 [2]: {{ "/2017/08/29/badass-eyepatches.html" | relative_url }}
