--- a/_posts/2019-09-10-argle.md
+++ b/_posts/2019-09-10-argle.md
@@ -30,7 +30,7 @@ Argle used 2 character points to buy extra gear. Likes to shoot enemies with his
 bow. Will grapple and stab if can't shoot. Will spend earned points on being
 more shooty; might spend them on being better wrestler too.
 
-## Argle, Half-Ogre Scout
+## Argle, 248-Point Half-Ogre Scout
 
 **ST** 15 {50}; **DX** 14 {80}; **IQ** 10 {0}; **HT** 13 {30}
 
