--- a/_posts/2019-09-16-dark-one.md
+++ b/_posts/2019-09-16-dark-one.md
@@ -6,6 +6,13 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-dark-one.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
 Dark Ones are small humanoids from the Shadowfell, echoing the world's halflings
 in the same way Shadar-Kai (which we'll eventually get to) echo its
 humans. They're halfling-sized with purplish skin, pronounced noses, pupiless
