--- a/_posts/2019-10-01-balor.md
+++ b/_posts/2019-10-01-balor.md
@@ -13,6 +13,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This is part of a series! Go [here][1] to see the other entries.
+
 The Monster Manual lists demons in alphabetic order, and the Vault lists them by
 level. Since we're using the Monster Manual as our guide here, let's examine
 them alphabetically. Doing this means our first demon is the one right at the
@@ -130,3 +132,5 @@ Speaking of encounters, the sample one in the MM is level 26: one balor, 1
 thunderblast cyclone elemental, and 2 efreet pyresingers. It's likely these two
 efreet wizards have managed to bind a balor, because I can't really see the
 relationship going the other way.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
