--- a/_posts/2019-10-08-barlgura.md
+++ b/_posts/2019-10-08-barlgura.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class=right>
+  <img src="{{ "/assets/wir-mm-4e-barlgura.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 We continue our tour of the Abyss with the Barlgura, which looks basically like
 a demonic orangutan with wicked claws and fangs. I guess these have been part of
 D&D for a while, but my first contact with them in published material was the
@@ -49,3 +58,5 @@ I would probably not have given these apes a second thought if it hadn't been
 for _Heathen_. If you're looking for a positive example of early 4e adventure
 writing, you can't go wrong with that one. It can easily be turned into a
 mini-campaign, and is certainly leagues above Keep on the Shadowfell.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
