--- a/_posts/2019-10-10-evistro.md
+++ b/_posts/2019-10-10-evistro.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class=right>
+  <img src="{{ "/assets/wir-mm-4e-evistro.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 Evistros are also known as "Carnage Demons", and they're all about the
 carnage. These man-sized demons have red skin, needle-like teeth, digitigrade
 legs and large black claws on both their hands and feet. In other words, they
@@ -49,3 +58,6 @@ demon opponents. They just need the standard damage fix and you're good to go.
 At higher levels, you can make them into minions and have dozens of the things
 swarming all around the battlefield as the party tries to fight their more
 powerful demon bosses.
+
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
