--- a/_posts/2019-10-11-glabrezu.md
+++ b/_posts/2019-10-11-glabrezu.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class=center>
+  <img src="{{ "/assets/wir-mm-4e-glabrezu.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 Fourth Edition demons are not at all fond of subtlety or complicated schemes,
 but that doesn't mean they're _stupid_. I mean, it very often does, but not
 always. Take the glabrezu, for example: it has Int 24, making it by far the
@@ -75,3 +84,5 @@ strong argument for making them demon vampires again instead of abominations.
 I'm going to be honest, I have trouble telling glabrezus, evistros and goristros
 apart just from the names, but these demons are actually kinda cool. You don't
 always see a Brute spellcaster.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
