--- a/_posts/2019-10-14-goristro.md
+++ b/_posts/2019-10-14-goristro.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class=left>
+  <img src="{{ "/assets/wir-mm-4e-goristro.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 A Goristro is basically a bigger, furrier, and spikier version of the Bull Demon
 from classic Doom. They're described in the Monster Manual as "living siege
 engines", and as Baphomet's favorite demon type. They're not on the Monster
@@ -45,3 +54,5 @@ A goristro is a demon's demon, which is to say it's a near-mindless rage
 machine. By themselves they're kinda boring. You should place them alongside
 whoemever summoned them, or alongside more interesting demons if the party is
 taking the fight to the Abyss for some reason.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
