--- a/_posts/2019-10-14-hezrou.md
+++ b/_posts/2019-10-14-hezrou.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class=right>
+  <img src="{{ "/assets/wir-mm-4e-hezrou r.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 Hezrou a relative rarity among demons in that they like to serve. Whether their
 master is a stronger demon or a mortal summoner, they will happily obey orders
 as long as they're given opportunities to kill things.
@@ -58,3 +67,5 @@ Hezrou might not be the most badass demons around, but they sure have a lot of
 character. "Stinky toad demon who is happy with its lot in life as a goon" is
 enough to make it memorable in a whole plane of creatures that smoulder with
 generic rage.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
