--- a/_posts/2019-10-14-goristro.md
+++ b/_posts/2019-10-14-goristro.md
@@ -7,7 +7,7 @@ tags:
 ---
 
 {::nomarkdown}
-<figure class=left>
+<figure class=center>
   <img src="{{ "/assets/wir-mm-4e-goristro.png" | absolute_url }}"/>
   <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
 </figure>
