--- a/_posts/2019-10-14-hezrou.md
+++ b/_posts/2019-10-14-hezrou.md
@@ -7,8 +7,8 @@ tags:
 ---
 
 {::nomarkdown}
-<figure class=right>
-  <img src="{{ "/assets/wir-mm-4e-hezrou r.png" | absolute_url }}"/>
+<figure class=center>
+  <img src="{{ "/assets/wir-mm-4e-hezrou.png" | absolute_url }}"/>
   <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
 </figure>
 {:/nomarkdown}
