Immolith, drafts and pictures

--- a/_posts/2019-10-16-immolith.md
+++ b/_posts/2019-10-16-immolith.md
@@ -6,11 +6,21 @@ tags:
     - lets-read
 ---
 
-Every time you kill a demon, its soul is sent screaming back to the Abyss. In
-time, it reincarnates as a new demon. However, sometimes the process goes wrong,
-and a bunch of demon souls bump into each other on the way to the Abyss and fuse
-into a big clump. This katamari of evil can't reincarnate properly, and instead
-rises as an undead demon. And this is how immoliths are made!
+{::nomarkdown}
+<figure class=left>
+  <img src="{{ "/assets/wir-mm-4e-immolith.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
+Every time you kill a demon, its soul is sent screaming back to the Abyss, where
+it will eventually reincarnate as a new demon. However, sometimes the process
+goes wrong, and a bunch of demon souls bump into each other on the way to the
+Abyss and fuse into a big clump. This katamari of evil can't reincarnate
+properly, and instead rises as an undead demon. And this is how immoliths are
+made!
 
 Immoliths look like pillars of fire topped by a demonic skull. Many different
 skeletal limbs emerge from their flames, likely belonging to the original demons
@@ -51,3 +61,5 @@ slowed by the Deathfire Curse, and likely by the immolith's buddies.
 The sample encounter is level 14: one immolith, 2 vrocks, 4 mezzodemons, and 6
 horde ghouls. Since it appears both mezzodemons and vrocks have means to limit a
 character's mobility, my analysis above checks out.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
