Drafts, pictures and mariliths

--- a/_posts/2019-10-26-marilith.md
+++ b/_posts/2019-10-26-marilith.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class=left>
+  <img src="{{ "/assets/wir-mm-4e-marilith.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 I think I've finally figured out what distinguishes a humanoid from a magical
 beast in 4e. Does it have hands? If it does it's a humanoid, if it doesn't it's
 a magical beast.
@@ -14,7 +23,7 @@ That's the only explanation that makes sense for why a Marilith is a Large
 Elemental _Humanoid_ (demon), despite being a six-armed lady with the lower body
 of a snake. With succubi having become devils (more on that later), mariliths
 have the distinction of being the most human-looking of demons. Some people even
-find them sexy. Yes, I'm talking about you, you Monster Musume fan.
+find them sexy. Yes, I'm talking about you, dear Monster Musume fans.
 
 These demons have been a part of the game for a long time, and are iconic enough
 to exist both in the Monster Manual and on the Monster Vault. The two versions
@@ -79,3 +88,5 @@ all of that and baits the PCs into it.
 The sample encounter in the MM is level 23, a marilith and four hezrou. The toad
 goons are just the thing to keep the fighters occupied while their boss slithers
 towards the squishies.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
