--- a/_posts/2019-11-04-vrock.md
+++ b/_posts/2019-11-04-vrock.md
@@ -7,6 +7,15 @@ tags:
 ---
 
 
+{::nomarkdown}
+<figure class=left>
+  <img src="{{ "/assets/wir-mm-4e-vrock.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2008 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 Vrocks have been in D&D for a long time now. They look like humanoid buzzards,
 covered in dirty feathers and the occasional spike. A pair of functional wings
 sprouts from their back, and they have lizard tails. They're on both the MM and
@@ -57,3 +66,6 @@ Starscream! They're nifty. I'm a bit divided on the removal of the Stunning
 Screech in the MV update. On the one hand stuns are rough, and non-selective
 area attacks are a pain for your teammates. On the other hand it captures the
 vrock's Chronic Backstabbing Syndrome so well!
+
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
