--- a/_posts/2019-11-07-babau.md
+++ b/_posts/2019-11-07-babau.md
@@ -6,6 +6,13 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class=left>
+  <img src="{{ "/assets/wir-mm-4e-babau.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2010 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
 In fourth edition, the Babau first appears on the Monster Manual 3. We're
 viewing them ahead of time because they also appear on the Monster Vault.
 
@@ -18,7 +25,7 @@ primordial like the other demon lords. Instead, he was an archdevil who got it
 into his mind to invade the Abyss. Why did he do that? I don't know. The lore in
 the MM3 mentions the Blood War, but I didn't think that was still a thing in
 this edition. Maybe it's a vestige of his backstory from Planescape, or maybe
-the Blood war has a different explanation for its existence here.
+the Blood War has a different explanation for its existence here.
 
 Anyway, shortly after getting to the Abyss, Graz'zt was corrupted by the seed of
 evil and decided to stay around and become a demon lord. Glasya, another
@@ -65,9 +72,8 @@ power for then a PC is close to dropping.
 ## Final Impressions
 
 I'm gonna have to go with "meh" on this one. Their backstory feels kinda
-shoehorned in. They somehow brought back the Blood War and Graz'zt, something
-which I feel was completely unnecessary. I was never a fan of pretty manipulator
-types protected by metaplot.
+shoehorned in. They somehow brought back the Blood War and Graz'zt, both of
+which I feel are completely unnecessary.
 
 As for the babaus themselves, they seem a bit too hard to use properly, since
 they absolutely must gain combat advantage to do level-appropriate damage with
