Add series link

--- a/_posts/2019-11-07-babau.md
+++ b/_posts/2019-11-07-babau.md
@@ -13,6 +13,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This is part of a series! Go [here][1] to see the other entries.
+
 In fourth edition, the Babau first appears on the Monster Manual 3. We're
 viewing them ahead of time because they also appear on the Monster Vault.
 
@@ -82,3 +84,6 @@ terrain with obstacles that are hard to overcome without teleportation, but then
 they can't teleport back even if they drop the abducted PC. And if the PC
 doesn't fall on that first turn, then the demon is now stranded far from its own
 allies and together with an angry PC.
+
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
