--- a/_posts/2019-11-12-dretch.md
+++ b/_posts/2019-11-12-dretch.md
@@ -6,6 +6,13 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure>
+  <img src="{{ "/assets/wir-mm-4e-dretch.png" | absolute_url }}"/>
+  <figcaption>Illustration Copyright 2010 Wizards of the Coast.</figcaption>
+</figure>
+{:/nomarkdown}
+
 Dretches are the pond scum of the Abyss. The name "dretch" is likely a
 contraction of "demon wretch", because these things are weak, stupid and
 stinky. Everyone bullies them back home, and more powerful demons love throwing
@@ -14,8 +21,8 @@ the sight of dretches dying in droves.
 
 I think dretches used to be the souls of Chaotic Evil sinners in previous
 editions, but that is not the case here. Demons in 4e don't care about souls,
-and no one who dies goes to the Abyss. These balls of rage and bad body odor
-just spontaneously generate from the corruption of that plane.
+and no one who dies goes to the Abyss. These balls of rage and body odor just
+spontaneously generate from the corruption of that plane.
 
 In this edition, Dretches first show up in the Monster Manual 2, so we're
 getting a bit ahead of ourselves here. This is because they're also present in
